# humidity-sensor

./: .gitmodules  Cargo.toml  LICENSE  bmp.gdb  memory.x  setup_env.sh
.cargo/: config
src/: humidity.rs  led.rs  main.rs
src/board_support/: humidity_sensor.rs  mod.rs  random_number_generator.rs  rf_transmitter.rs
src/utilities/: mod.rs  sleep_delay.rs
