[package]
authors = ["Daniel Giesbrecht <daniel.soley.giesbrecht@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "humidity-sensor"
version = "0.1.0"

[dependencies.stm32l0xx-hal]
version = "0.6.2"
features = ["stm32l0x1", "rt", "io-STM32L051"]

[dependencies.cortex-m]
version = "0.6.0"

[dependencies.cortex-m-rt]
version = "0.6.10"

[dependencies.cortex-m-semihosting]
version = "0.3.3"

[dependencies.shtcx]
git = "https://github.com/dbrgn/shtcx-rs.git"
branch = "master"

[dependencies.panic-halt]
version = "0.2.0"

[dependencies.array-init]
version = "0.1.1"

# this lets you use `cargo fix`!
[[bin]]
name = "humidity-sensor"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
